implements /unicorns/name with and without full view
